--- a/index.html
+++ b/index.html
@@ -1,186 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Scavenger Hunt</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Scavenger Hunts</title>
 
-<style>
-body {
-  font-family: system-ui, sans-serif;
-  background: linear-gradient(180deg,#eef2f7,#f4f6f8);
-  padding:20px;
-}
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 16px;
+    }
 
-.card {
-  max-width:900px;
-  margin:auto;
-  background:#fff;
-  padding:24px;
-  border-radius:14px;
-}
+    h1 {
+      text-align: center;
+      margin-bottom: 12px;
+    }
 
-button {
-  padding:14px 20px;
-  font-size:18px;
-  cursor:pointer;
-  border:none;
-  border-radius:10px;
-}
+    .create-btn {
+      display: block;
+      width: 100%;
+      max-width: 420px;
+      margin: 0 auto 16px;
+      padding: 14px;
+      font-size: 16px;
+      background: #2b7cff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+    }
 
-button.primary { background:#2ecc71; color:white; }
-button.secondary { background:#3498db; color:white; }
-button.danger { background:#e74c3c; color:white; }
+    .search {
+      display: block;
+      width: 100%;
+      max-width: 420px;
+      margin: 0 auto 20px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
 
-.center { text-align:center; }
+    .hunt {
+      background: white;
+      border-radius: 12px;
+      padding: 16px;
+      margin-bottom: 16px;
+      max-width: 420px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-.hunt-card {
-  padding:16px;
-  border-radius:12px;
-  background:#f8fafc;
-  margin-bottom:14px;
-}
+    .hunt-title {
+      font-weight: bold;
+      font-size: 18px;
+      margin-bottom: 12px;
+    }
 
-.search {
-  width:100%;
-  padding:12px;
-  font-size:16px;
-  margin:16px 0;
-}
+    .actions {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
 
-@media print {
-  button, .search { display:none; }
-}
-</style>
+    .btn {
+      flex: 1;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      font-size: 14px;
+    }
+
+    .test {
+      background: #e7f0ff;
+      color: #2b7cff;
+    }
+
+    .print {
+      background: #eee;
+    }
+
+    .delete {
+      background: #e74c3c;
+      color: white;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="card" id="app"></div>
+  <h1>Scavenger Hunts</h1>
 
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <button class="create-btn" onclick="location.href='create-hunt.html'">
+    ➕ Create New Hunt
+  </button>
 
-<script>
-/* ================= UTIL ================= */
-function uid(){ return Math.random().toString(36).slice(2,9); }
-function code(){ return Math.floor(100000 + Math.random()*900000).toString(); }
+  <input class="search" placeholder="Search hunts..." />
 
-/* ================= BASE HUNTS (VERBATIM) ================= */
-const BASE_HUNTS = [
-{
-  name:"Escape the House",
-  clues:[
-    ["I show your face but I’m not a photo. I hang on walls and doors. Where am I?","Mirror"],
-    ["I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.","Bookshelf"],
-    ["I open wide but never talk. I keep food safe and cold. Don’t forget to close me!","Fridge"],
-    ["I go round and round but never get dizzy. I clean but hate socks in pairs.","Washing Machine"],
-    ["I have hands but no arms. I never clap, but I’m always right on time.","Clock"],
-    ["I hide your feet when you’re not home. I like pairs, but I’m often missing one.","Shoe Rack"],
-    ["I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.","Couch"],
-    ["I light up the dark but disappear by day. Flip me on.","Lamp"],
-    ["I’m full of secrets, but I don’t talk. You knock before opening me.","Bedroom Door"],
-    ["You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED","Red Ribbon"]
-  ]
-},
-{
-  name:"Fortnite IRL",
-  clues:[
-    ["You’ve dropped in. First loot location: Where controllers go when the game is off.","Gaming Desk"],
-    ["Shields up! Find the place where drinks recharge HP.","Fridge"],
-    ["Storm incoming 🌪️ Where do shoes hide when the storm hits outside?","Entrance"],
-    ["You need mats. Wood, brick, metal… Find where tools live.","Garage"],
-    ["Campfire deployed 🔥 Where the family gathers to chill.","Lounge Room"],
-    ["Inventory check. You can’t win without sleep.","Bed"],
-    ["Chest nearby… I hear it. Where secrets are stored behind closed doors.","Wardrobe"],
-    ["Reboot van activated ⚡ Where devices come back to life.","Phone Charger"],
-    ["High ground wins games. Go where you can see the whole room.","Stairs"],
-    ["Final circle. Only one remains. Where battles are watched, not played.","TV"],
-    ["One last challenge… Look where snacks disappear during long sessions.","Pantry"],
-    ["VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER","Silver Ribbon"]
-  ]
-},
-{
-  name:"System Breach",
-  clues:[
-    ["SYSTEM ONLINE Begin at the device that controls all others.","Router"],
-    ["AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.","Notebook"],
-    ["DATA COLD STORAGE Files preserved at low temperature.","Fridge"],
-    ["INPUT DEVICE DETECTED Where commands are typed, not spoken.","Keyboard"],
-    ["PERIPHERAL FOUND One click can change everything.","Mouse"],
-    ["POWER SOURCE Without this, the system fails.","Power Board"],
-    ["CACHE CLEARED Where clothes are reset to default state.","Laundry"],
-    ["BACKUP LOCATION Where items are stored 'just in case'.","Garage"],
-    ["DISPLAY OUTPUT Pixels form reality here.","Monitor"],
-    ["SECURITY CHECKPOINT Entry requires permission.","Door"],
-    ["ENCRYPTED STORAGE Locked, hidden, not obvious.","Drawer"],
-    ["SYSTEM LOG Tracks everything that happens over time.","Clock"],
-    ["USER PROFILE Where the operator rests.","Bed"],
-    ["FINAL ACCESS NODE Only the admin reaches this point.","Desk"],
-    ["ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN","Green Ribbon"]
-  ]
-}
-];
+  <div id="hunts"></div>
 
-/* ================= INIT ================= */
-let hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
+  <script>
+    const BASE_HUNTS = [
+      {
+        title: "Escape the House",
+        steps: 10,
+        isBase: true
+      },
+      {
+        title: "Fortnite IRL",
+        steps: 12,
+        isBase: true
+      },
+      {
+        title: "System Breach",
+        steps: 15,
+        isBase: true
+      }
+    ];
 
-if(!localStorage.getItem("huntsInitialized")){
-  hunts = BASE_HUNTS.map(h=>({
-    id: uid(),
-    name: h.name,
-    isBase: true,
-    steps: h.clues.map(c=>({
-      clue: c[0],
-      location: c[1],
-      code: code()
-    }))
-  }));
-  localStorage.setItem("hunts",JSON.stringify(hunts));
-  localStorage.setItem("huntsInitialized","true");
-}
+    const userHunts =
+      JSON.parse(localStorage.getItem("userHunts") || "[]");
 
-const app = document.getElementById("app");
+    const hunts = [...BASE_HUNTS, ...userHunts]
+      .sort((a, b) => a.title.localeCompare(b.title));
 
-/* ================= HOME ================= */
-function home(){
-  const hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
+    const container = document.getElementById("hunts");
 
-  app.innerHTML = `
-    <h1>Scavenger Hunts</h1>
+    hunts.forEach(hunt => {
+      const card = document.createElement("div");
+      card.className = "hunt";
 
-    <button class="secondary" onclick="location='create-hunt.html'">
-      ➕ Create New Hunt
-    </button>
+      const title = document.createElement("div");
+      title.className = "hunt-title";
+      title.textContent = `${hunt.title} (${hunt.steps} steps)`;
 
-    <input class="search" placeholder="Search hunts...">
+      const actions = document.createElement("div");
+      actions.className = "actions";
 
-    ${hunts.map(h=>`
-      <div class="hunt-card">
-        <strong>${h.name} (${h.steps.length} steps)</strong><br><br>
+      const testBtn = document.createElement("button");
+      testBtn.className = "btn test";
+      testBtn.textContent = "▶ Test";
 
-        <button onclick="location='?start=${h.id}'">▶ Test</button>
-        <button onclick="location='?print=${h.id}'">🖨 Print</button>
+      const printBtn = document.createElement("button");
+      printBtn.className = "btn print";
+      printBtn.textContent = "🖨 Print";
 
-        ${!h.isBase ? `
-          <button class="danger" onclick="deleteHunt('${h.id}')">
-            🗑 Delete
-          </button>
-        ` : ``}
-      </div>
-    `).join("")}
-  `;
-}
+      actions.appendChild(testBtn);
+      actions.appendChild(printBtn);
 
-function deleteHunt(id){
-  if(!confirm("Delete this hunt? This cannot be undone.")) return;
-  let hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
-  hunts = hunts.filter(h=>h.id!==id);
-  localStorage.setItem("hunts",JSON.stringify(hunts));
-  home();
-}
+      // ✅ DELETE BUTTON GUARD (only change)
+      if (!hunt.isBase) {
+        const deleteBtn = document.createElement("button");
+        deleteBtn.className = "btn delete";
+        deleteBtn.textContent = "🗑 Delete";
 
-home();
-</script>
+        deleteBtn.onclick = () => {
+          if (confirm(`Delete "${hunt.title}"?`)) {
+            const updated = userHunts.filter(h => h.title !== hunt.title);
+            localStorage.setItem("userHunts", JSON.stringify(updated));
+            location.reload();
+          }
+        };
+
+        actions.appendChild(deleteBtn);
+      }
+
+      card.appendChild(title);
+      card.appendChild(actions);
+      container.appendChild(card);
+    });
+  </script>
 
 </body>
 </html>
