--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 body {
   font-family: system-ui, sans-serif;
-  background:#f4f6f8;
+  background: linear-gradient(180deg,#eef2f7,#f4f6f8);
   padding:20px;
 }
 
@@ -21,17 +21,35 @@ body {
 }
 
 button {
-  padding:12px 18px;
-  font-size:16px;
+  padding:14px 20px;
+  font-size:18px;
   cursor:pointer;
   border:none;
   border-radius:10px;
-  margin-right:6px;
 }
 
-button.primary { background:#2ecc71;color:white; }
-button.secondary { background:#3498db;color:white; }
-button.delete { background:#e74c3c;color:white; }
+button.primary {
+  background:#2ecc71;
+  color:white;
+  margin-top:14px;
+}
+
+button.secondary {
+  background:#3498db;
+  color:white;
+  margin-top:10px;
+}
+
+input {
+  padding:14px;
+  font-size:18px;
+  width:100%;
+  max-width:320px;
+  margin-top:14px;
+  text-align:center;
+}
+
+.center { text-align:center; }
 
 .hunt-card {
   padding:16px;
@@ -46,75 +64,298 @@ button.delete { background:#e74c3c;color:white; }
   font-size:16px;
   margin:16px 0;
 }
+
+.scanner {
+  margin-top:14px;
+  display:none;
+}
+
+video {
+  width:100%;
+  max-width:320px;
+  border-radius:12px;
+}
+
+.overlay {
+  position:fixed;
+  inset:0;
+  display:none;
+  align-items:center;
+  justify-content:center;
+  font-size:40px;
+  font-weight:bold;
+  color:white;
+  z-index:1000;
+}
+.overlay.correct { background:rgba(0,160,0,0.85); }
+.overlay.wrong { background:rgba(200,0,0,0.85); }
+
+.print-page { page-break-after:always; }
+.print-item { margin-bottom:20px; }
+.notes { border:1px dashed #aaa; height:40px; margin-top:6px; }
+.qr-label { font-weight:bold; margin-bottom:6px; }
+
+@media print {
+  button, .search, .scanner { display:none; }
+}
 </style>
 </head>
 
 <body>
+
 <div class="card" id="app"></div>
 
-<script>
-/* ================= DATA ================= */
+<div id="correct" class="overlay correct">✅ Correct!</div>
+<div id="wrong" class="overlay wrong">❌ Try Again</div>
 
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+
+<script>
+/* ================= UTIL ================= */
+function uid(){ return Math.random().toString(36).slice(2,9); }
+function code(){ return Math.floor(100000 + Math.random()*900000).toString(); }
+
+/* ================= BASE HUNTS (VERBATIM) ================= */
 const BASE_HUNTS = [
-  { title:"Escape the House", steps:10 },
-  { title:"Fortnite IRL", steps:12 },
-  { title:"System Breach", steps:15 }
+{
+  name:"Escape the House",
+  clues:[
+    ["I show your face but I’m not a photo. I hang on walls and doors. Where am I?","Mirror"],
+    ["I have pages but no homework. I’m quiet unless you drop me. I live where stories sleep.","Bookshelf"],
+    ["I open wide but never talk. I keep food safe and cold. Don’t forget to close me!","Fridge"],
+    ["I go round and round but never get dizzy. I clean but hate socks in pairs.","Washing Machine"],
+    ["I have hands but no arms. I never clap, but I’m always right on time.","Clock"],
+    ["I hide your feet when you’re not home. I like pairs, but I’m often missing one.","Shoe Rack"],
+    ["I’m soft, I’m comfy, and I steal naps. People sit on me 'just for a minute'.","Couch"],
+    ["I light up the dark but disappear by day. Flip me on.","Lamp"],
+    ["I’m full of secrets, but I don’t talk. You knock before opening me.","Bedroom Door"],
+    ["You cracked every lock! The final key is hidden where treasures are kept safe. Your Colour is RED","Red Ribbon"]
+  ]
+},
+{
+  name:"Fortnite IRL",
+  clues:[
+    ["You’ve dropped in. First loot location: Where controllers go when the game is off.","Gaming Desk"],
+    ["Shields up! Find the place where drinks recharge HP.","Fridge"],
+    ["Storm incoming 🌪️ Where do shoes hide when the storm hits outside?","Entrance"],
+    ["You need mats. Wood, brick, metal… Find where tools live.","Garage"],
+    ["Campfire deployed 🔥 Where the family gathers to chill.","Lounge Room"],
+    ["Inventory check. You can’t win without sleep.","Bed"],
+    ["Chest nearby… I hear it. Where secrets are stored behind closed doors.","Wardrobe"],
+    ["Reboot van activated ⚡ Where devices come back to life.","Phone Charger"],
+    ["High ground wins games. Go where you can see the whole room.","Stairs"],
+    ["Final circle. Only one remains. Where battles are watched, not played.","TV"],
+    ["One last challenge… Look where snacks disappear during long sessions.","Pantry"],
+    ["VICTORY ROYALE 🏆 Claim your reward where legends are made. Your colour is SILVER","Silver Ribbon"]
+  ]
+},
+{
+  name:"System Breach",
+  clues:[
+    ["SYSTEM ONLINE Begin at the device that controls all others.","Router"],
+    ["AUTHENTICATION REQUIRED Find where passwords are written but never stored digitally.","Notebook"],
+    ["DATA COLD STORAGE Files preserved at low temperature.","Fridge"],
+    ["INPUT DEVICE DETECTED Where commands are typed, not spoken.","Keyboard"],
+    ["PERIPHERAL FOUND One click can change everything.","Mouse"],
+    ["POWER SOURCE Without this, the system fails.","Power Board"],
+    ["CACHE CLEARED Where clothes are reset to default state.","Laundry"],
+    ["BACKUP LOCATION Where items are stored 'just in case'.","Garage"],
+    ["DISPLAY OUTPUT Pixels form reality here.","Monitor"],
+    ["SECURITY CHECKPOINT Entry requires permission.","Door"],
+    ["ENCRYPTED STORAGE Locked, hidden, not obvious.","Drawer"],
+    ["SYSTEM LOG Tracks everything that happens over time.","Clock"],
+    ["USER PROFILE Where the operator rests.","Bed"],
+    ["FINAL ACCESS NODE Only the admin reaches this point.","Desk"],
+    ["ROOT ACCESS GRANTED ACCESS GRANTED SYSTEM BREACHED Retrieve payload from secure location. Your colour is GREEN","Green Ribbon"]
+  ]
+}
 ];
 
-const userHunts =
-  JSON.parse(localStorage.getItem("userHunts") || "[]");
+/* ================= INIT ================= */
+let hunts = JSON.parse(localStorage.getItem("hunts")||"[]");
 
-/* ================= RENDER ================= */
+if(!localStorage.getItem("huntsInitialized")){
+  hunts = BASE_HUNTS.map(h=>({
+    id:uid(),
+    name:h.name,
+    steps:h.clues.map(c=>({ clue:c[0], location:c[1], code:code() }))
+  }));
+  localStorage.setItem("hunts",JSON.stringify(hunts));
+  localStorage.setItem("huntsInitialized","true");
+}
 
+const q = new URLSearchParams(location.search);
 const app = document.getElementById("app");
 
-app.innerHTML = `
-  <h1>Scavenger Hunts</h1>
-  <button class="primary" onclick="location='create-hunt.html'">➕ Create New Hunt</button>
-  <input class="search" placeholder="Search hunts...">
-`;
+/* ================= ROUTER ================= */
+if(q.get("start")) startPage(q.get("start"));
+else if(q.get("play")) play();
+else if(q.get("print")) printPage(q.get("print"));
+else home();
 
-const allHunts = [...BASE_HUNTS, ...userHunts]
-  .sort((a,b)=>a.title.localeCompare(b.title));
-
-allHunts.forEach(hunt => {
-  const card = document.createElement("div");
-  card.className = "hunt-card";
-
-  card.innerHTML = `
-    <strong>${hunt.title} (${hunt.steps} steps)</strong><br><br>
-    <button class="secondary">▶ Test</button>
-    <button class="secondary">🖨 Print</button>
+/* ================= HOME ================= */
+function home(){
+  app.innerHTML = `
+    <h1>Scavenger Hunts</h1>
+    <input class="search" placeholder="Search hunts...">
+    <button class="primary" onclick="location='create.html'">➕ Create New Hunt</button>
+    ${hunts.map(h=>`
+      <div class="hunt-card">
+        <strong>${h.name} (${h.steps.length} steps)</strong><br><br>
+        <button onclick="location='?start=${h.id}'">▶ Test</button>
+        <button onclick="location='?print=${h.id}'">🖨 Print Instructions</button>
+      </div>
+    `).join("")}
   `;
+}
 
-  const actions = card;
+/* ================= START ================= */
+function startPage(id){
+  const h = hunts.find(x=>x.id===id);
+  app.innerHTML = `
+<div class="center">
+<h1>🎉 Welcome, Explorer!</h1>
+<p><strong>${h.name}</strong></p>
+<p>You have been invited on a special scavenger hunt!</p>
+<p>Around this place are hidden clues waiting to be found.<br>
+Each clue will lead you to the next one.</p>
+<ul style="text-align:left;display:inline-block">
+<li>Look carefully</li>
+<li>Think smart</li>
+<li>Scan a QR code</li>
+<li>Type in a secret number</li>
+</ul>
+<p>When you’re ready…</p>
+<button class="primary" onclick="location='?play=${id}&s=0'">▶️ Start the Hunt</button>
+</div>`;
+}
 
-  /* ===== DELETE BUTTON FIX (ONLY CHANGE) ===== */
+/* ================= PLAY ================= */
+let scanStream, scanActive=false;
 
-  const isUserCreated =
-    userHunts.some(h => h.title === hunt.title);
-
-  if (isUserCreated) {
-    const deleteBtn = document.createElement("button");
-    deleteBtn.className = "delete";
-    deleteBtn.textContent = "🗑 Delete";
-
-    deleteBtn.onclick = () => {
-      if (confirm(`Delete "${hunt.title}"?`)) {
-        const updated =
-          userHunts.filter(h => h.title !== hunt.title);
-        localStorage.setItem("userHunts", JSON.stringify(updated));
-        location.reload();
-      }
-    };
-
-    actions.appendChild(deleteBtn);
+function play(){
+  const h = hunts.find(x=>x.id===q.get("play"));
+  const s = parseInt(q.get("s"));
+  if(s>=h.steps.length){
+    app.innerHTML = `<h2 class="center">🎉 Hunt Complete!</h2>`;
+    return;
   }
+  const step = h.steps[s];
+  app.innerHTML = `
+<div class="center">
+  <h2 style="font-size:26px;font-weight:700">${step.clue}</h2>
+  <input id="ans" placeholder="Enter 6-digit code">
+  <button class="secondary" onclick="startScan()">📷 Scan QR Code</button>
 
-  /* ===== END FIX ===== */
+  <div class="scanner" id="scanner">
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas" hidden></canvas>
+    <p>Point camera at QR code</p>
+  </div>
 
-  app.appendChild(card);
-});
+  <button class="primary" onclick="check('${step.code}',${s})">Submit</button>
+</div>`;
+}
+
+/* ================= QR SCANNER ================= */
+async function startScan(){
+  if(scanActive) return;
+  scanActive = true;
+
+  const scanner = document.getElementById("scanner");
+  const video = document.getElementById("video");
+  const canvas = document.getElementById("canvas");
+  const ctx = canvas.getContext("2d");
+
+  scanner.style.display = "block";
+
+  scanStream = await navigator.mediaDevices.getUserMedia({
+    video:{ facingMode:"environment" }
+  });
+
+  video.srcObject = scanStream;
+
+  function tick(){
+    if(!scanActive) return;
+    if(video.readyState === video.HAVE_ENOUGH_DATA){
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      ctx.drawImage(video,0,0);
+      const img = ctx.getImageData(0,0,canvas.width,canvas.height);
+      const qr = jsQR(img.data,img.width,img.height);
+      if(qr){
+        document.getElementById("ans").value = qr.data;
+        stopScan();
+        return;
+      }
+    }
+    requestAnimationFrame(tick);
+  }
+  tick();
+}
+
+function stopScan(){
+  scanActive = false;
+  if(scanStream){
+    scanStream.getTracks().forEach(t=>t.stop());
+    scanStream = null;
+  }
+  document.getElementById("scanner").style.display="none";
+}
+
+/* ================= CHECK ================= */
+function check(c,s){
+  const v=document.getElementById("ans").value.trim();
+  if(v===c){
+    show("correct");
+    setTimeout(()=>location='?play=' + q.get("play") + '&s=' + (s+1),900);
+  } else show("wrong");
+}
+
+function show(id){
+  const el=document.getElementById(id);
+  el.style.display="flex";
+  setTimeout(()=>el.style.display="none",1000);
+}
+
+/* ================= PRINT ================= */
+function printPage(id){
+  const h = hunts.find(x=>x.id===id);
+  app.innerHTML = `
+<h1>${h.name} – Parent Instructions</h1>
+
+<div class="print-page">
+${h.steps.map((s,i)=>`
+  <div class="print-item">
+    <strong>Clue ${i+1}:</strong> ${s.clue}<br>
+    <strong>Location:</strong> ${s.location}<br>
+    <strong>Code:</strong> ${s.code}<br>
+    <div class="qr-label">QR Code for Clue ${i+1}</div>
+    <canvas id="pqr${i}"></canvas>
+    <div class="notes"></div>
+  </div>
+`).join("")}
+</div>
+
+<div class="print-page">
+<h2>Cut-Out QR Codes</h2>
+${h.steps.map((s,i)=>`
+  <div class="print-item">
+    <div class="qr-label">Clue ${i+1} – ${s.location}</div>
+    <canvas id="cqr${i}"></canvas>
+  </div>
+`).join("")}
+</div>
+
+<button onclick="window.print()">Print</button>
+`;
+  h.steps.forEach((s,i)=>{
+    QRCode.toCanvas(document.getElementById("pqr"+i), s.code);
+    QRCode.toCanvas(document.getElementById("cqr"+i), s.code);
+  });
+}
 </script>
+
 </body>
 </html>
